--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -226,11 +226,11 @@ a.nav-link.active:before {
 .navbar-expand .navbar-collapse {
   justify-content: space-between;
 }
-a.btn.btn-lg {
+a.btnn.btn-lg {
   border-radius: 5px;
   padding: 13px 26px;
 }
-.btn.btn-lg {
+.btnn.btn-lg {
   font-family: "Nunito";
   font-style: normal;
   font-weight: 700;
@@ -240,12 +240,13 @@ a.btn.btn-lg {
   background: #3556bf;
   border-radius: 0;
   text-transform: capitalize;
+  text-decoration: none;
   padding: 14px 24px;
   position: relative;
   z-index: 1;
 }
-.btn:before,
-.btn:after {
+.btnn:before,
+.btnn:after {
   content: "";
   width: 100%;
   height: 50px;
@@ -256,7 +257,7 @@ a.btn.btn-lg {
   z-index: -1;
   transition: all 0.3s ease;
 }
-.btn:after {
+.btnn:after {
   background: #1ab69d;
   border: none;
   width: 100%;
@@ -266,18 +267,18 @@ a.btn.btn-lg {
   bottom: 0;
   left: 0;
 }
-.btn:hover::before {
+.btnn:hover::before {
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
 }
-a.btn.btn-lg:hover {
+a.btnn.btn-lg:hover {
   border: 1px solid #1ab69d !important;
   color: #fff;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
   background-color: #1ab69d;
 }
-a.btn.btn-lg:hover .btn.btn-lg {
+a.btnn.btn-lg:hover .btnn.btn-lg {
   z-index: -1;
 }
