--- a/src/Components/CourseCategoryComponent/CourseCategoryComponent.css
+++ b/src/Components/CourseCategoryComponent/CourseCategoryComponent.css
@@ -1,90 +1,99 @@
 #troo-da-course-categories-section {
-    padding-top: 105px;
-    position: relative;
-    padding-bottom: 100px;
+  padding-top: 105px;
+  position: relative;
+  padding-bottom: 100px;
 }
 #troo-da-course-categories-section .row {
-    align-items: center;
+  align-items: center;
 }
 .cour-txt {
-    margin-left: -60px;
-    padding-right: 72px;
+  margin-left: -60px;
+  padding-right: 72px;
 }
 #troo-da-course-categories-section .vert-move {
-    right: 29%;
-    left: inherit !important;
-    top: 15%;
+  right: 29%;
+  left: inherit !important;
+  top: 15%;
 }
 #troo-da-course-categories-section .call-ss {
-    float: right;
+  float: right;
 }
 #troo-da-course-categories-section .row {
-    align-items: center;
+  align-items: center;
 }
 .course-list {
-    background: #FFFFFF;
-    border: 1px solid rgba(26, 182, 157, 0.2);
-    box-shadow: 0px 8px 15px rgb(23 23 23 / 5%);
-    border-radius: 5px;
-    text-align: center;
-    padding-top: 33px;
-    cursor: pointer;
-    margin: 49px 0 -17px 0;
+  background: #ffffff;
+  border: 1px solid rgba(26, 182, 157, 0.2);
+  box-shadow: 0px 8px 15px rgb(23 23 23 / 5%);
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 33px;
+  cursor: pointer;
+  margin: 49px 0 -17px 0;
 }
 .shape {
-    position: relative;
-    width: 95px;
-    height: 84px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 1s;
-    margin: 0 auto;
+  position: relative;
+  width: 95px;
+  height: 84px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 1s;
+  margin: 0 auto;
 }
 .shape span {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 33% 65% 66% 35% / 44% 41% 50% 55%;
-    transition: 1s;
-    background: rgba(53, 86, 191, 0.1);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 33% 65% 66% 35% / 44% 41% 50% 55%;
+  transition: 1s;
+  background: rgba(53, 86, 191, 0.1);
 }
 .shape span:nth-child(1) {
-    animation: animate 5s linear infinite;
+  animation: animate 5s linear infinite;
 }
-@keyframes animate{
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 .shape span:nth-child(2) {
-    animation: animate2 7s linear infinite;
+  animation: animate2 7s linear infinite;
 }
-@keyframes animate2{
-    0% {
-        transform: rotate(360deg);
-    }
-    100% {
-        transform: rotate(0deg);
-    }
+@keyframes animate2 {
+  0% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 .shape span:nth-child(3) {
-    animation: animate 10s linear infinite;
+  animation: animate 10s linear infinite;
 }
 .content img {
-    width: 37px;
-    height: 35px;
+  width: 37px;
+  height: 35px;
 }
 .course-list h4 {
-    margin-top: 20px;
-    margin-bottom: 10px;
-    transition: 0.5s;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  transition: 0.5s;
 }
 .course-list p {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
+}
+
+@media (max-width: 1800px) {
+  #troo-da-course-categories-section .vert-move {
+    right: 24%;
+  }
+  .sub-page .left-img-col .vert-move {
+    display: none;
+  }
 }
