--- a/src/Components/FetureComponent/FetureComponent.css
+++ b/src/Components/FetureComponent/FetureComponent.css
@@ -148,110 +148,116 @@ body h2 {
   color: #1ab69d;
 }
 .more-course {
-    background: #FFFFFF;
-    border: 1px solid rgba(26, 182, 157, 0.1);
-    box-shadow: 0px 8px 15px rgb(23 23 23 / 5%);
-    border-radius: 50%;
-    text-align: center;
-    padding: 76px 41px;
-    margin-left: 69px;
+  background: #ffffff;
+  border: 1px solid rgba(26, 182, 157, 0.1);
+  box-shadow: 0px 8px 15px rgb(23 23 23 / 5%);
+  border-radius: 50%;
+  text-align: center;
+  padding: 76px 41px;
+  margin-left: 69px;
 }
 .more-course p {
-    margin-top: 16px;
-    margin-bottom: 30px;
+  margin-top: 16px;
+  margin-bottom: 30px;
 }
 .loader-ss {
-    width: 58px;
-    height: 58px;
-    position: absolute;
-    animation: loader-ss 2s infinite ease-in-out;
-    right: 8%;
-    bottom: 10%;
+  width: 58px;
+  height: 58px;
+  position: absolute;
+  animation: loader-ss 2s infinite ease-in-out;
+  right: 8%;
+  bottom: 10%;
 }
-@keyframes loader-ss{
-
-    0% {
-        transform: rotate(-45deg);
-    }
-    50% {
-        transform: rotate(-135deg);
-    }
-    100% {
-        transform: rotate(-225deg);
-    }
+@keyframes loader-ss {
+  0% {
+    transform: rotate(-45deg);
+  }
+  50% {
+    transform: rotate(-135deg);
+  }
+  100% {
+    transform: rotate(-225deg);
+  }
 }
 .loader-ss span {
-    width: 58px;
-    height: 58px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    border: 1px solid #3556BF;
+  width: 58px;
+  height: 58px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border: 1px solid #3556bf;
 }
 .loader-ss span:nth-child(1) {
-    animation: span-1 2s ease-in-out infinite;
+  animation: span-1 2s ease-in-out infinite;
 }
 
-@keyframes span-1{
-    0% {
-        transform: translate(0);
-    }
-    50% {
-        transform: translate(-50px, 0);
-        border-color: #3556BF;
-    }
-    100% {
-        transform: translate(0);
-    }
+@keyframes span-1 {
+  0% {
+    transform: translate(0);
+  }
+  50% {
+    transform: translate(-50px, 0);
+    border-color: #3556bf;
+  }
+  100% {
+    transform: translate(0);
+  }
 }
 .loader-ss span:nth-child(2) {
-    animation: span-2 2s ease-in-out infinite;
+  animation: span-2 2s ease-in-out infinite;
 }
-@keyframes span-2{
-    0% {
-        transform: translate(0);
-    }
-    50% {
-        transform: translate(50px, 0);
-        border-color: #3556BF;
-    }
-    100% {
-        transform: translate(0);
-    }
+@keyframes span-2 {
+  0% {
+    transform: translate(0);
+  }
+  50% {
+    transform: translate(50px, 0);
+    border-color: #3556bf;
+  }
+  100% {
+    transform: translate(0);
+  }
 }
 .loader-ss span:nth-child(3) {
-    animation: span-3 2s ease-in-out infinite;
+  animation: span-3 2s ease-in-out infinite;
 }
-@keyframes span-3{
-    0% {
-        transform: translate(0);
-    }
-    50% {
-        transform: translate(0, -50px);
-        border-color: #3556BF;
-    }
-    100% {
-        transform: translate(0);
-    }
+@keyframes span-3 {
+  0% {
+    transform: translate(0);
+  }
+  50% {
+    transform: translate(0, -50px);
+    border-color: #3556bf;
+  }
+  100% {
+    transform: translate(0);
+  }
 }
 .loader-ss span:nth-child(4) {
-    animation: span-4 2s ease-in-out infinite;
+  animation: span-4 2s ease-in-out infinite;
 }
-@keyframes span-4{
-    0% {
-        transform: translate(0);
-    }
-    50% {
-        transform: translate(0, 50px);
-        border-color: #3556BF;
-    }
-    100% {
-        transform: translate(0);
-    }
+@keyframes span-4 {
+  0% {
+    transform: translate(0);
+  }
+  50% {
+    transform: translate(0, 50px);
+    border-color: #3556bf;
+  }
+  100% {
+    transform: translate(0);
+  }
 }
 .Cources-page #troo-da-feature-section {
   padding: 100px 0 100px 0;
 }
 .Cources-page.sub-page .call-ss {
   text-align: center;
+}
+
+@media (max-width: 1800px) {
+  .swing {
+    left: 3%;
+    display: none;
+  }
 }
