--- a/src/Components/InstructorComponent/InstructureComponent.css
+++ b/src/Components/InstructorComponent/InstructureComponent.css
@@ -75,11 +75,11 @@
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
-  line-height: 22px;
+  line-height: 35px;
   color: #171717;
 }
 .team-deatils ul {
-  padding: 0 0 0 10px;
+  padding: 0 0 0 2px;
 }
 .team-deatils ul li {
   display: inline-flex;
@@ -94,6 +94,12 @@
 }
 .instructor:hover .ins-txt h4 {
   color: #1ab69d;
+}
+.team-deatils ul li a:hover {
+  background: rgba(26, 182, 157, 0.2);
+}
+.team-deatils ul li a:hover svg {
+  color: #1AB69D;
 }
 .instructor:hover .team-deatils {
   margin-top: 280px;
