--- a/src/Components/StudentReviewComponent/StudentReviewComponent.css
+++ b/src/Components/StudentReviewComponent/StudentReviewComponent.css
@@ -120,7 +120,7 @@
 #troo-da-students-says-section .more-course .call-ss a {
     max-width: 160px;
     width: 100%;
-    padding: 14px 0;
+    padding: 14px 15px;
 }
 #troo-da-students-says-section .quadrado {
     top: inherit;
